--- a/styles.css
+++ b/styles.css
@@ -53,17 +53,15 @@ html, body {
 .demo-drawer-header {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
   justify-content: flex-end;
   padding: 16px;
-  height: 151px;
 }
 .demo-avatar-dropdown {
   display: flex;
   position: relative;
-  flex-direction: row;
   align-items: center;
   width: 100%;
+  padding: 16px;
 }
 
 .demo-navigation {
