--- a/style/messagerie.css
+++ b/style/messagerie.css
@@ -27,10 +27,10 @@ If you like this solution, you might also want to check out the 1.0 version:
 }
 
 .responstable tr {
-  border: 1px solid #D9E4E6;
+  border: 1px solid #F1F7FD;
 }
 .responstable tr:nth-child(odd) {
-  background-color: #EAF3F3;
+  background-color: #ECF2F4;
 }
 .responstable th {
   display: none;
@@ -68,11 +68,11 @@ If you like this solution, you might also want to check out the 1.0 version:
 .responstable td:first-child {
   display: table-cell;
   text-align: center;
-  border-right: 1px solid #D9E4E6;
+  border-right: 1px solid #F1F7FD;
 }
 @media (min-width: 480px) {
   .responstable td {
-    border: 1px solid #D9E4E6;
+    border: 1px solid #F1F7FD;
   }
 }
 .responstable th, .responstable td {
