--- a/style/material.css
+++ b/style/material.css
@@ -7423,7 +7423,8 @@ input.mdl-button[type="submit"] {
   z-index: 1;
   -webkit-overflow-scrolling: touch; }
   .mdl-layout--fixed-drawer > .mdl-layout__content {
-  }
+   margin-left: 240px;
+   }
   .mdl-layout__container.has-scrolling-header .mdl-layout__content {
     overflow: visible; }
   @media screen and (max-width: 1024px) {
